# EOS

./: .gitignore  README.md
cmake/: CMakeLists.txt
config/dependencies/avr/: install_packages.sh
src/: CMakeLists.txt  version.h.in
src/HAL/frontends/: IDs.txt
src/HAL/frontends/ATMEGA/2560/delay/: delay.c  delay.h
src/HAL/frontends/ATMEGA/2560/serial/: serial.c  serial.h
src/HAL/frontends/ATMEGA/328p/delay/: delay.c  delay.h
src/HAL/frontends/ATMEGA/328p/serial/: serial.c  serial.h
src/HAL/frontends/Arduino/Mega/delay/: delay.c
src/HAL/frontends/Arduino/Mega/serial/: serial.c  serial.h
src/HAL/serial/: hal_serial.c  hal_serial.h  serial.c  serial.h
src/HAL/time/: time.c  time.h
src/core/: cli.c  cli.h  main.c  system.h
src/core/debug/: logger.c  logger.h
src/core/tasks/: queue.c  queue.h
src/core/utils/string/: strings.c  strings.h
tutorials/: README.md
